--- a/sass/aboutpage/_heroabout.scss
+++ b/sass/aboutpage/_heroabout.scss
@@ -11,7 +11,7 @@
     max-width: map-get($container-max-widths, xxl);
     margin: 0 auto;
     box-sizing: border-box;
-      overflow: hidden;
+    overflow: hidden;
   }
 
   .heroabout-wrapper {
@@ -31,6 +31,10 @@
       justify-items: center;
       padding-top: 44px;
       position: relative;
+
+      @media screen and (max-width: $bp-mobilelarge) {
+        padding-top: 32px;
+      }
 
       .content__headline {
         display: flex;
@@ -61,6 +65,8 @@
 
           @media screen and (max-width: $bp-mobilelarge) {
             padding: 0px 16px;
+            font-size: 48px;
+            line-height: 53px;
           }
         }
 
@@ -88,6 +94,10 @@
       .content__img {
         display: flex;
         justify-content: center;
+
+        @media screen and (max-width: $bp-mobilelarge) {
+          height: 397px;
+        }
       }
     }
 
