--- a/sass/aboutpage/_ourteam.scss
+++ b/sass/aboutpage/_ourteam.scss
@@ -47,6 +47,7 @@
 
         @media screen and (max-width: $bp-mobilelarge) {
           font-size: 24px;
+          line-height: 26px;
         }
       }
 
@@ -85,6 +86,12 @@
           flex-direction: column;
           gap: 20px;
 
+          img {
+            @media screen and (max-width: $bp-mobilelarge) {
+              height: 356px;
+            }
+          }
+
           &-name {
             display: flex;
             flex-direction: column;
@@ -105,6 +112,7 @@
 
               @media screen and (max-width: $bp-mobilelarge) {
                 font-size: 24px;
+                line-height: 29px;
               }
             }
 
