--- a/sass/aboutpage/_stats.scss
+++ b/sass/aboutpage/_stats.scss
@@ -34,6 +34,7 @@
       @media screen and (max-width: $bp-mobilelarge) {
         height: 100%;
         max-height: 149px;
+        gap: 20px;
       }
     }
 
