--- a/sass/aboutpage/_aboutus.scss
+++ b/sass/aboutpage/_aboutus.scss
@@ -48,8 +48,12 @@
           &-title {
             font-size: 28px;
             color: $content-color-light-4;
-            line-height: 110.00000000000001%;
+            line-height: 31px;
 
+            @media screen and (max-width: $bp-large) {
+              font-size: 28px;
+              line-height: 110.00000000000001%;
+            }
             @media screen and (max-width: $bp-mobilelarge) {
               font-size: 24px;
               line-height: 26px;
@@ -59,7 +63,11 @@
           &-sub {
             font-size: 56px;
             color: $content-color-dark-2;
-            line-height: 120%;
+            line-height: 66px;
+
+            @media screen and (max-width: $bp-large) {
+              line-height: 120%;
+            }
 
             @media screen and (max-width: $bp-mobilelarge) {
               font-size: 40px;
@@ -83,7 +91,8 @@
           }
 
           &-ilustration {
-            width: clamp(343px, 39.72vw, 572px);
+            height: clamp(323.21px, 39.72vw, 539px);
+
           }
 
           .velety__main-container {
@@ -120,7 +129,7 @@
                   line-height: 38.4px;
                   letter-spacing: 1.5px;
                 }
-                
+
                 @media screen and (max-width: $bp-mobilelarge) {
                   height: 342px;
                 }
