--- a/sass/landingpage/_featured.scss
+++ b/sass/landingpage/_featured.scss
@@ -32,9 +32,11 @@
 
   &__subtitle {
     color: $content-color-light-3;
+    line-height: 31px;
 
     @media only screen and (max-width: $bp-smallest) {
       font-size: 24px;
+      line-height: 26px;
     }
   }
 
@@ -42,6 +44,7 @@
     text-align: center;
     font-size: 56px;
     text-align: center;
+    line-height: 67px;
 
     @media only screen and (max-width: $bp-small) {
       padding: 0 48px;
@@ -112,7 +115,7 @@
 
     .product-card__name {
       font-size: 28px;
-      line-height: 110%;
+      line-height: 31px;
     }
 
     .product-card__image {
@@ -126,7 +129,7 @@
     .product-card__price {
       font-weight: 700;
       font-size: 22px;
-      line-height: 140%;
+      line-height: 31px;
       color: $color-primary-dark-2;
     }
 
@@ -150,7 +153,7 @@
         font-family: $font-secondary;
         font-weight: 300;
         font-size: 22px;
-        line-height: 140%;
+        line-height: 31px;
         color: $content-color-dark-1;
       }
     }
@@ -167,6 +170,7 @@
       gap: 24px;
 
       width: 480px;
+      height: 688px;
 
       border-width: 0px 1px;
       border-style: solid;
