--- a/sass/landingpage/_hero.scss
+++ b/sass/landingpage/_hero.scss
@@ -3,7 +3,7 @@
   position: relative;
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../img/hero-bg.jpg");
+    url("../img/hero-bg.webp");
   background-size: 50vw;
   background-repeat: no-repeat;
   background-position: right top;
