Fix Score PageSpeed

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ h5 {
 }
 
 h6 {
-  font-family: Aileron;
+  font-family: "Aileron", sans-serif;
   font-weight: 300;
   font-style: Light;
   font-size: 28px;
