--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -35,7 +35,7 @@ h5 {
 }
 
 h6 {
-  font-family: Aileron;
+  font-family: $font-secondary;
   font-weight: 300;
   font-style: Light;
   font-size: 28px;
