--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* IvyMode - Light */
 @font-face {
   font-family: "IvyMode";
-  src: url("fonts/IvyMode_Light.otf") format("opentype");
+  src: url("fonts/IvyMode_Light.woff2") format("opentype");
 }
 * {
   margin: 0;
