--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -37,7 +37,7 @@ $font-primary: "IvyMode", sans-serif;
 /* IvyMode - Light */
 @font-face {
   font-family: "IvyMode";
-  src: url("fonts/IvyMode_Light.otf") format("opentype");
+  src: url("fonts/IvyMode_Light.woff2") format("opentype");
 }
 
 * {
