--- a/sass/landingpage/_footer.scss
+++ b/sass/landingpage/_footer.scss
@@ -88,7 +88,7 @@
       gap: 14px;
 
       font-size: 22px;
-              line-height: 140%;
+      line-height: 140%;
       text-align: center;
       text-decoration: none;
       list-style: none;
@@ -294,6 +294,13 @@
     a {
       text-decoration: none;
       color: inherit;
+      transition: all 1s;
+
+      &:hover,
+      &:focus {
+        color: darken($color-primary, 10%);
+        text-decoration: underline;
+      }
     }
   }
 }
