--- a/sass/landingpage/_footer.scss
+++ b/sass/landingpage/_footer.scss
@@ -284,7 +284,7 @@
 
                 &:hover,
       &:focus {
-        color: darken($color-primary, 10%);
+        color: $content-color-dark-2;
         text-decoration: underline;
       }
     }
