--- a/sass/landingpage/_footer.scss
+++ b/sass/landingpage/_footer.scss
@@ -280,8 +280,7 @@
 
   a {
     color: $color-primary; 
-    font-weight: 600;       // lebih tebal dari teks biasa
-    border-bottom: 1px dashed $color-primary; // alternatif selain underline
+    text-decoration: underline;
     transition: color 0.3s ease;
 
     &:hover,
