--- a/sass/aboutpage/_heroabout.scss
+++ b/sass/aboutpage/_heroabout.scss
@@ -3,7 +3,7 @@
   position: relative;
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../img/about/hero-bg.png");
+    url("../img/about/hero-bg.webp");
   background-size: cover;
   background-repeat: no-repeat;
 
