Fix Score PageSpeed Webp Img

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 /* IvyMode - Light */
 @font-face {
   font-family: "IvyMode";
-  src: url("fonts/IvyMode_Light.woff2") format("opentype");
+  src: url("fonts/IvyMode_Light.woff2") format("woff2");
+  font-display: optional;
 }
 * {
   margin: 0;
@@ -29,14 +30,14 @@ body a {
 }
 
 h1 {
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   font-weight: 300;
   font-style: light;
   line-height: 110%;
 }
 
 h2 {
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   font-weight: 300;
   font-style: light;
   line-height: 120%;
@@ -44,7 +45,7 @@ h2 {
 }
 
 h3 {
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
@@ -54,7 +55,7 @@ h3 {
 }
 
 h5 {
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   font-weight: 300;
   font-size: 30px;
   line-height: 120%;
@@ -379,7 +380,7 @@ h6 {
     font-size: 32px;
     text-decoration: none;
     color: #213721;
-    font-family: "IvyMode", sans-serif;
+    font-family: "IvyMode", Arial, sans-serif;
     font-weight: 300;
   }
   .nav__mobile-login {
@@ -1083,7 +1084,7 @@ h6 {
   color: #899f87;
 }
 .all-products .headline-subtitle {
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   font-size: 56px;
   font-weight: 300;
   color: #213721;
@@ -2230,14 +2231,6 @@ h6 {
   text-align: center;
   line-height: 140%;
 }
-.footer__designed a {
-  text-decoration: none;
-  transition: all 1s;
-}
-.footer__designed a:hover, .footer__designed a:focus {
-  color: rgb(172.5, 196.5, 160.5);
-  text-decoration: underline;
-}
 .footer__links {
   display: flex;
   flex-direction: row;
@@ -2517,7 +2510,7 @@ h6 {
 .heroabout {
   background-color: #899f87;
   position: relative;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/about/hero-bg.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/about/hero-bg.webp");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -2567,7 +2560,7 @@ h6 {
   text-align: center;
   font-weight: 300;
   line-height: 119px;
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   color: #f2f6ef;
 }
 @media screen and (max-width: 1200px) {
@@ -2590,7 +2583,7 @@ h6 {
   text-align: center;
   font-weight: 300;
   line-height: 140%;
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   color: #f2f6ef;
 }
 @media screen and (max-width: 1200px) {
@@ -2845,7 +2838,7 @@ h6 {
   width: 48px;
 }
 .aboutus__wrapper-content .missionandvision .mission-title {
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   font-size: 40px;
   font-weight: 300;
   line-height: 120%;
@@ -2888,7 +2881,7 @@ h6 {
   width: 48px;
 }
 .aboutus__wrapper-content .missionandvision .vision-title {
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   font-size: 40px;
   font-weight: 300;
   line-height: 120%;
@@ -2988,7 +2981,7 @@ h6 {
   font-size: 40px;
   font-weight: 300;
   line-height: 120%;
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   color: #213721;
 }
 @media screen and (max-width: 425px) {
@@ -3679,7 +3672,7 @@ h6 {
 .stats__content .stat__item-main {
   font-size: 56px;
   font-weight: 300;
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
   line-height: 120%;
   letter-spacing: 1%;
   align-self: center;
@@ -3928,7 +3921,7 @@ h6 {
   font-weight: 300;
   line-height: 120%;
   color: #f2f6ef;
-  font-family: "IvyMode", sans-serif;
+  font-family: "IvyMode", Arial, sans-serif;
 }
 @media only screen and (max-width: 992px) {
   .cta__title {
