--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,25 @@
 @font-face {
   font-family: "IvyMode";
   src: url("fonts/IvyMode_Light.otf") format("opentype");
+  font-display: swap;
+}
+@font-face {
+  font-family: "Aileron";
+  src: url("fonts/Aileron-Light.otf") format("opentype");
+  font-weight: 300;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Aileron";
+  src: url("fonts/Aileron-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Aileron";
+  src: url("fonts/Aileron-SemiBold.otf") format("opentype");
+  font-weight: 600;
+  font-display: swap;
 }
 * {
   margin: 0;
